last commit for label correction
Label head corrected and commiting

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class = "unitComb" onclick="selectBox('unit2Box', 'unit2Options',18)">
                 <div >
                  <input type="radio" name="unit" id="unit2" onclick="event.stopPropagation()" >
-                 <label for="unit2">2 Unit <span class="discount">20% Off</span></label>
+                 <label for="unit2">2 Units <span class="discount">20% Off</span></label>
                 </div>
                 <div>
                     <span class="price">$18.00 USD</span><br/>
